; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/ntp/lib/isc/extr_error.c_isc_error_runtimecheck.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/ntp/lib/isc/extr_error.c_isc_error_runtimecheck.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [21 x i8] c"RUNTIME_CHECK(%s) %s\00", align 1
@isc_msgcat = common dso_local global i32 0, align 4
@ISC_MSGSET_GENERAL = common dso_local global i32 0, align 4
@ISC_MSG_FAILED = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [7 x i8] c"failed\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @isc_error_runtimecheck(i8* %0, i32 %1, i8* %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  store i8* %0, i8** %4, align 8
  store i32 %1, i32* %5, align 4
  store i8* %2, i8** %6, align 8
  %7 = load i8*, i8** %4, align 8
  %8 = load i32, i32* %5, align 4
  %9 = load i8*, i8** %6, align 8
  %10 = load i32, i32* @isc_msgcat, align 4
  %11 = load i32, i32* @ISC_MSGSET_GENERAL, align 4
  %12 = load i32, i32* @ISC_MSG_FAILED, align 4
  %13 = call i32 @isc_msgcat_get(i32 %10, i32 %11, i32 %12, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.1, i64 0, i64 0))
  %14 = call i32 @isc_error_fatal(i8* %7, i32 %8, i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str, i64 0, i64 0), i8* %9, i32 %13)
  ret void
}

declare dso_local i32 @isc_error_fatal(i8*, i32, i8*, i8*, i32) #1

declare dso_local i32 @isc_msgcat_get(i32, i32, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
